# pacifica-archiveinterface

./: .pre-commit-config.yaml  .travis.yml  ArchiveInterfaceServer.py  CONTRIBUTING.md  Dockerfile  Dockerfile.hpss  Dockerfile.posix  Doxyfile  Makefile.am  README.md  appveyor.yml  archive_interface.py  archive_interface_responses.py  autogen.sh  config.cfg  configure.ac  docker-compose.yml  entrypoint.sh  extendedfile.py  hpss-ctypes.py  hpss_ctypes.py  id2filename.c  id2filename.py  main.c  myemsl-archive-interface.spec.in  pacifica-archive-interface.spec.in  posix_interface.py  posixfiles.c  pylint-everything.sh  pylint-unittests.sh  requirements-dev.txt  requirements.txt  runit.sh  server.conf  server.py  setup-nohpss.py  setup.py  setup_nohpss.py  test-posixfiles.c  test.c  (+2 more)
.github/workflows/: sphinx.yml  tox.yml
archiveinterface/: __init__.py  archive_interface.py  archive_interface_error.py  archive_interface_responses.py  archive_interface_unit_tests.py  archive_posix_unit_tests.py  archive_utils.py  id2filename.py  wsgi.py
archiveinterface/archivebackends/: __init__.py  archive_backend_factory.py
archiveinterface/archivebackends/abstract/: __init__.py  (+2 more)
archiveinterface/tests/: archive_interface_unit_test.py  archive_posix_unit_test.py  archive_posix_unit_tests.py  archive_response_unit_test.py  archive_response_unit_tests.py
docs/: conf.py
myemsl/: archive_interface.py  archive_interface_responses.py  extendedfile.py  hpss_ctypes.py
old/: autogen.sh  configure.ac  doxygen.am  id2filename.c  myemslarchive.h  posixfiles.c  test-posixfiles.c
pacifica/: application.ini  archive_interface.py  archive_interface_responses.py  archive_interface_unit_tests.py  extendedfile.py  hpss_ctypes.py  uwsgi.py
pacifica/archiveinterface/: __init__.py  rest_generator.py  wsgi.py
post_deployment_tests/: deployment_test.py  deployment_tests.py
scripts/: __init__.py  archiveinterfaceserver.py  server.py
src/: status.c
tests/: cherrypy_test.py  posix_test.py
travis/: static-analysis.sh  test-deploy.sh  unit-tests.sh
(+23 files in other folders)
