AC_INIT([myemsl-archive-interface],[0.98.0],[David.Brown@pnnl.gov])
AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S

AC_PROG_LIBTOOL
AC_PROG_INSTALL

PKG_CHECK_MODULES([LIBHPSS],[libhpss])
PKG_CHECK_MODULES([GLIB],[glib-2.0])

DX_INIT_DOXYGEN(myemsl-archive-interface, Doxyfile, docs)
DX_DOT_FEATURE(ON)
DX_HTML_FEATURE(ON)
DX_MAN_FEATURE(ON)
DX_PDF_FEATURE(ON)
DX_PS_FEATURE(ON)

AC_OUTPUT([
  Makefile
  myemsl-archive-interface.spec
])
